[gd_scene load_steps=16 format=3 uid="uid://c4u3e55tfsuj0"]

[ext_resource type="PackedScene" uid="uid://bd7ljfe1vra0b" path="res://assets/characters/Skeleton_Minion.glb" id="1_txkty"]
[ext_resource type="Script" uid="uid://mu4d723o2yuc" path="res://scripts/skeleton.gd" id="2_txkty"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_pbvs3"]

[sub_resource type="BoxShape3D" id="BoxShape3D_txkty"]
size = Vector3(1, 1.79346, 1)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5pgwy"]
animation = &"Death_C_Skeletons"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_txkty"]
animation = &"Idle_Combat"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ivqcw"]
animation = &"Spawn_Air"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bnirc"]
animation = &"Walking_D_Skeletons"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5pgwy"]
xfade_time = 0.3
switch_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_w4hcs"]
xfade_time = 0.6
switch_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_haw2w"]
xfade_time = 0.3
switch_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_i0f3v"]
xfade_time = 0.3
switch_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ssl1b"]
xfade_time = 0.2
switch_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xrus2"]
xfade_time = 0.3
switch_mode = 1

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_xrus2"]
states/Death_C_Skeletons/node = SubResource("AnimationNodeAnimation_5pgwy")
states/Death_C_Skeletons/position = Vector2(1260, 100)
states/End/position = Vector2(1531, 100)
states/Idle_Combat/node = SubResource("AnimationNodeAnimation_txkty")
states/Idle_Combat/position = Vector2(653, 100)
states/Spawn_Air/node = SubResource("AnimationNodeAnimation_ivqcw")
states/Spawn_Air/position = Vector2(400, 100)
states/Walking_D_Skeletons/node = SubResource("AnimationNodeAnimation_bnirc")
states/Walking_D_Skeletons/position = Vector2(952, 100)
transitions = ["Start", "Spawn_Air", SubResource("AnimationNodeStateMachineTransition_5pgwy"), "Spawn_Air", "Idle_Combat", SubResource("AnimationNodeStateMachineTransition_w4hcs"), "Idle_Combat", "Walking_D_Skeletons", SubResource("AnimationNodeStateMachineTransition_haw2w"), "Walking_D_Skeletons", "Idle_Combat", SubResource("AnimationNodeStateMachineTransition_i0f3v"), "Walking_D_Skeletons", "Death_C_Skeletons", SubResource("AnimationNodeStateMachineTransition_ssl1b"), "Death_C_Skeletons", "End", SubResource("AnimationNodeStateMachineTransition_xrus2")]
graph_offset = Vector2(506, 12)

[node name="Skeleton" instance=ExtResource("1_txkty")]
script = ExtResource("2_txkty")

[node name="Rig" parent="." index="0"]
transform = Transform3D(1.295, 0, 0, 0, 1.295, 0, 0, 0, 1.295, 0, 0, 0)

[node name="Skeleton3D" parent="Rig" index="0"]
bones/0/position = Vector3(-1.42109e-14, 0, -0.708052)
bones/1/position = Vector3(2.70013e-07, 0.0574744, -1.13252)
bones/1/rotation = Quaternion(-0.201286, 0.169537, -0.0353963, 0.9641)
bones/2/rotation = Quaternion(-0.459873, -0.115146, -0.101506, 0.874617)
bones/2/scale = Vector3(1, 1, 1)
bones/3/rotation = Quaternion(-0.0141783, 1.30389e-08, -0.00122728, 0.999899)
bones/4/position = Vector3(0.849437, 0.961334, -0.279655)
bones/4/rotation = Quaternion(-0.433246, -0.134775, -0.865996, 0.2102)
bones/4/scale = Vector3(1, 0.999999, 1)
bones/5/rotation = Quaternion(-1.20561e-08, -4.29345e-08, -0.156357, 0.987701)
bones/6/rotation = Quaternion(-2.21515e-10, 4.35652e-09, 0.0266581, 0.999645)
bones/7/rotation = Quaternion(0.0196046, -0.0463385, 0.00608604, 0.998715)
bones/8/position = Vector3(-0.250389, 0.2919, 0.355821)
bones/8/rotation = Quaternion(0.756844, -0.422452, -0.385225, 0.316739)
bones/8/scale = Vector3(1, 1, 1)
bones/9/position = Vector3(-0.212007, 0.134132, 2.45179e-08)
bones/9/rotation = Quaternion(-0.609794, 0.0587138, 0.522316, 0.593204)
bones/10/rotation = Quaternion(3.38893e-08, 3.70456e-08, 0.474936, 0.88002)
bones/11/rotation = Quaternion(1.50964e-08, 1.10731e-08, -0.0266581, 0.999645)
bones/12/rotation = Quaternion(-0.219523, 0.125743, -0.629508, 0.734655)
bones/13/position = Vector3(2.37584e-07, 0.0961251, -0.0574999)
bones/13/rotation = Quaternion(-0.0484184, 0.275144, 0.640968, 0.714921)
bones/13/scale = Vector3(1, 1, 1)
bones/14/rotation = Quaternion(-0.0253563, -0.185978, 0.0293916, 0.981787)
bones/14/scale = Vector3(1, 1, 1)
bones/15/position = Vector3(0.170945, 0.113587, 1.12356e-08)
bones/15/rotation = Quaternion(0.710874, 0.21567, 0.460128, 0.486237)
bones/16/rotation = Quaternion(0.00206897, 3.84094e-08, 3.22575e-09, 0.999998)
bones/17/rotation = Quaternion(0.00702036, -0.690152, -0.0719866, 0.720041)
bones/18/rotation = Quaternion(0.0306683, 0.971693, -0.231739, -0.0342029)
bones/19/position = Vector3(-0.528442, -0.823121, 1.67247)
bones/19/rotation = Quaternion(0.519358, -0.848558, -0.064974, 0.0774356)
bones/19/scale = Vector3(1, 1, 1)
bones/20/rotation = Quaternion(0.714163, -6.28551e-08, 5.41067e-07, 0.699979)
bones/21/rotation = Quaternion(-0.421767, -0.139731, -0.552186, 0.705463)
bones/22/rotation = Quaternion(0.0897018, 0.945003, -0.234443, -0.209666)
bones/23/position = Vector3(0.202725, 0.29231, 0.875812)
bones/23/rotation = Quaternion(0.707107, -2.29302e-07, -4.60552e-08, 0.707107)
bones/24/position = Vector3(0.202182, 0.0259903, 0.505181)
bones/24/rotation = Quaternion(-0.707107, -7.05285e-08, -7.05285e-08, 0.707107)
bones/25/position = Vector3(4.92604e-08, 1.05229, -0.0438605)
bones/25/rotation = Quaternion(0.170885, 0.417741, 0.825919, -0.337859)
bones/25/scale = Vector3(1, 1, 1)
bones/26/position = Vector3(3.75294e-09, 0.213436, -1.07269e-08)
bones/26/rotation = Quaternion(-8.61021e-08, 0.391084, 0.920355, -3.11101e-08)
bones/28/rotation = Quaternion(1, 1.09316e-08, 1.9088e-07, -1.49012e-08)
bones/29/rotation = Quaternion(1.38779e-17, 3.76679e-16, -1.94669e-08, 1)
bones/30/position = Vector3(-0.352552, 0.29231, 0.875812)
bones/30/rotation = Quaternion(0.707107, -3.82385e-08, 1.45009e-07, 0.707107)
bones/31/position = Vector3(-0.170945, 0.0259903, 0.945789)
bones/31/rotation = Quaternion(-0.707107, -7.05285e-08, -7.05285e-08, 0.707107)
bones/32/position = Vector3(1.94581e-08, 0.285602, 2.42861e-15)
bones/32/rotation = Quaternion(-5.59772e-09, 1.77136e-09, 0.955771, 0.294112)
bones/33/position = Vector3(3.75294e-09, 0.213436, -1.0343e-08)
bones/33/rotation = Quaternion(-0.209523, 0.233537, 0.945322, 0.0890319)
bones/33/scale = Vector3(1, 1, 1)
bones/34/position = Vector3(-2.12124e-08, 0.16565, -9.36086e-09)
bones/34/rotation = Quaternion(-0.391084, -6.885e-08, -6.56288e-08, 0.920355)
bones/35/rotation = Quaternion(1, 6.44699e-09, 1.86289e-07, 1.25528e-15)
bones/36/rotation = Quaternion(-1.76942e-16, -6.74099e-17, -1.94669e-08, 1)
bones/37/position = Vector3(1.08957, -0.205743, -2.51278)
bones/37/rotation = Quaternion(-0.684689, -0.176636, -0.176636, 0.68469)
bones/38/position = Vector3(1.02137, 0.100924, -2.12752)
bones/38/rotation = Quaternion(0.441715, 0.703549, 0.504305, 0.235762)
bones/39/position = Vector3(-0.453507, -0.115064, -1.78296)
bones/39/rotation = Quaternion(-0.707107, -7.27951e-08, -7.27951e-08, 0.707107)
bones/40/position = Vector3(-0.581728, 0.235071, -1.4908)
bones/40/rotation = Quaternion(-0.897657, 0.114713, 0.419492, -0.0712699)
bones/40/scale = Vector3(1, 1, 1)

[node name="CollisionShape3D" type="CollisionShape3D" parent="." index="1"]
transform = Transform3D(1.375, 0, 0, 0, 1.375, 0, 0, 0, 1.375, 0, 1.38178, 0)
shape = SubResource("CapsuleShape3D_pbvs3")

[node name="HitArea" type="Area3D" parent="." index="2"]
transform = Transform3D(1.375, 0, 0, 0, 1.375, 0, 0, 0, 1.375, 0, 1.38178, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitArea" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0212402, 0)
shape = SubResource("BoxShape3D_txkty")

[node name="AnimationTree" type="AnimationTree" parent="." index="4"]
tree_root = SubResource("AnimationNodeStateMachine_xrus2")
anim_player = NodePath("../AnimationPlayer")

[node name="VisibleOnScreenNotifier3D" type="VisibleOnScreenNotifier3D" parent="." index="5"]
transform = Transform3D(0.731601, 0, 0, 0, 1.31702, 0, 0, 0, 0.591893, 0, 1.37331, 0)

[node name="DeathTimer" type="Timer" parent="." index="6"]

[connection signal="area_entered" from="HitArea" to="." method="_on_hit_area_area_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
